--- a/wp-content/themes/medical-care/assets/css/style.css
+++ b/wp-content/themes/medical-care/assets/css/style.css
@@ -6,6 +6,8 @@
 @import "base/variables";
 @import "base/baseline";
 @import "base/utility-classes";
+@import "../js/scripts.js";
+@import "../js/modules/Search.js";
 
 /* BEM Blocks */
 @import "modules/shame";
